@@ -26,14 +26,10 @@ import static org.openmetadata.service.security.SecurityUtil.authHeaders;
 import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldDeleted;
 import static org.openmetadata.service.util.EntityUtil.fieldUpdated;
-import static org.openmetadata.service.util.TestUtils.ADMIN_AUTH_HEADERS;
+import static org.openmetadata.service.util.TestUtils.*;
 import static org.openmetadata.service.util.TestUtils.UpdateType.CHANGE_CONSOLIDATED;
 import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
 import static org.openmetadata.service.util.TestUtils.UpdateType.NO_CHANGE;
-import static org.openmetadata.service.util.TestUtils.assertListNotNull;
-import static org.openmetadata.service.util.TestUtils.assertListNull;
-import static org.openmetadata.service.util.TestUtils.assertResponse;
-import static org.openmetadata.service.util.TestUtils.assertResponseContains;
 
 import jakarta.ws.rs.client.WebTarget;
 import jakarta.ws.rs.core.Response;
@@ -54,12 +50,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.http.client.HttpResponseException;
 import org.joda.time.DateTime;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.MethodOrderer;
-import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
-import org.junit.jupiter.api.TestMethodOrder;
 import org.openmetadata.schema.api.data.CreatePipeline;
+import org.openmetadata.schema.api.data.RestoreEntity;
 import org.openmetadata.schema.api.services.CreatePipelineService;
 import org.openmetadata.schema.entity.data.Pipeline;
 import org.openmetadata.schema.entity.data.PipelineStatus;
@@ -72,17 +66,18 @@ import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.Task;
 import org.openmetadata.schema.utils.EntityInterfaceUtil;
 import org.openmetadata.schema.utils.JsonUtils;
+import org.openmetadata.schema.utils.ResultList;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
+import org.openmetadata.service.rdf.RdfUtils;
 import org.openmetadata.service.resources.EntityResourceTest;
 import org.openmetadata.service.resources.pipelines.PipelineResource.PipelineList;
 import org.openmetadata.service.resources.services.PipelineServiceResourceTest;
 import org.openmetadata.service.util.FullyQualifiedName;
-import org.openmetadata.service.util.ResultList;
+import org.openmetadata.service.util.RdfTestUtils;
 import org.openmetadata.service.util.TestUtils;
 
 @Slf4j
-@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class PipelineResourceTest extends EntityResourceTest<Pipeline, CreatePipeline> {
   public static List<Task> TASKS;
 
@@ -845,7 +840,101 @@ public class PipelineResourceTest extends EntityResourceTest<Pipeline, CreatePip
     assertEquals(actualStatus, expectedStatus);
   }
 
-  @Order(1)
+  @Test
+  void testPipelineRdfRelationships(TestInfo test) throws IOException {
+    if (!RdfTestUtils.isRdfEnabled()) {
+      LOG.info("RDF not enabled, skipping test");
+      return;
+    }
+
+    // Create pipeline with owner, tags and tasks
+    CreatePipeline createPipeline =
+        createRequest(test)
+            .withService(getContainer().getName())
+            .withOwners(listOf(USER1_REF))
+            .withTags(listOf(TIER1_TAG_LABEL))
+            .withTasks(TASKS);
+
+    Pipeline pipeline = createEntity(createPipeline, ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline exists in RDF
+    RdfTestUtils.verifyEntityInRdf(pipeline, RdfUtils.getRdfType("pipeline"));
+
+    // Verify hierarchical relationship (service CONTAINS pipeline)
+    RdfTestUtils.verifyContainsRelationshipInRdf(getContainer(), pipeline.getEntityReference());
+
+    // Verify owner relationship
+    RdfTestUtils.verifyOwnerInRdf(pipeline.getFullyQualifiedName(), USER1_REF);
+
+    // Verify pipeline tags
+    RdfTestUtils.verifyTagsInRdf(pipeline.getFullyQualifiedName(), pipeline.getTags());
+
+    // Verify task tags (tasks can have individual tags)
+    for (Task task : pipeline.getTasks()) {
+      if (task.getTags() != null && !task.getTags().isEmpty()) {
+        String taskFqn = pipeline.getFullyQualifiedName() + "." + task.getName();
+        RdfTestUtils.verifyTagsInRdf(taskFqn, task.getTags());
+      }
+    }
+  }
+
+  @Test
+  void testPipelineRdfSoftDeleteAndRestore(TestInfo test) throws IOException {
+    if (!RdfTestUtils.isRdfEnabled()) {
+      LOG.info("RDF not enabled, skipping test");
+      return;
+    }
+
+    // Create pipeline
+    CreatePipeline createPipeline =
+        createRequest(test).withService(getContainer().getName()).withOwners(listOf(USER1_REF));
+    Pipeline pipeline = createEntity(createPipeline, ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline exists
+    RdfTestUtils.verifyEntityInRdf(pipeline, RdfUtils.getRdfType("pipeline"));
+    RdfTestUtils.verifyContainsRelationshipInRdf(getContainer(), pipeline.getEntityReference());
+    RdfTestUtils.verifyOwnerInRdf(pipeline.getFullyQualifiedName(), USER1_REF);
+
+    // Soft delete the pipeline
+    deleteEntity(pipeline.getId(), ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline still exists in RDF after soft delete
+    RdfTestUtils.verifyEntityInRdf(pipeline, RdfUtils.getRdfType("pipeline"));
+    RdfTestUtils.verifyContainsRelationshipInRdf(getContainer(), pipeline.getEntityReference());
+    RdfTestUtils.verifyOwnerInRdf(pipeline.getFullyQualifiedName(), USER1_REF);
+
+    // Restore the pipeline
+    Pipeline restored =
+        restoreEntity(new RestoreEntity().withId(pipeline.getId()), OK, ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline still exists after restore
+    RdfTestUtils.verifyEntityInRdf(restored, RdfUtils.getRdfType("pipeline"));
+    RdfTestUtils.verifyContainsRelationshipInRdf(getContainer(), restored.getEntityReference());
+    RdfTestUtils.verifyOwnerInRdf(restored.getFullyQualifiedName(), USER1_REF);
+  }
+
+  @Test
+  void testPipelineRdfHardDelete(TestInfo test) throws IOException {
+    if (!RdfTestUtils.isRdfEnabled()) {
+      LOG.info("RDF not enabled, skipping test");
+      return;
+    }
+
+    // Create pipeline
+    CreatePipeline createPipeline = createRequest(test).withService(getContainer().getName());
+    Pipeline pipeline = createEntity(createPipeline, ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline exists
+    RdfTestUtils.verifyEntityInRdf(pipeline, RdfUtils.getRdfType("pipeline"));
+    RdfTestUtils.verifyContainsRelationshipInRdf(getContainer(), pipeline.getEntityReference());
+
+    // Hard delete the pipeline
+    deleteEntity(pipeline.getId(), true, true, ADMIN_AUTH_HEADERS);
+
+    // Verify pipeline no longer exists in RDF after hard delete
+    RdfTestUtils.verifyEntityNotInRdf(pipeline.getFullyQualifiedName());
+  }
+
   @Test
   void test_paginationFetchesTagsAtBothEntityAndFieldLevels(TestInfo test) throws IOException {
     // Use existing tags that are already set up in the test environment
@@ -881,15 +970,15 @@ public class PipelineResourceTest extends EntityResourceTest<Pipeline, CreatePip
     }
 
     // Test pagination with fields=tags (should fetch pipeline-level tags only)
-    WebTarget target =
-        getResource("pipelines").queryParam("fields", "tags").queryParam("limit", "10");
+    WebTarget target = getResource("pipelines").queryParam("fields", "tags");
 
-    PipelineList pipelineList = TestUtils.get(target, PipelineList.class, ADMIN_AUTH_HEADERS);
-    assertNotNull(pipelineList.getData());
+    List<Pipeline> pipelineList =
+        TestUtils.getAllPages(target, PipelineList.class, "after", "limit", 50, ADMIN_AUTH_HEADERS);
+    assertListNotEmpty(pipelineList);
 
     // Verify at least one of our created pipelines is in the response
     List<Pipeline> ourPipelines =
-        pipelineList.getData().stream()
+        pipelineList.stream()
             .filter(p -> createdPipelines.stream().anyMatch(cp -> cp.getId().equals(p.getId())))
             .collect(Collectors.toList());
 
@@ -915,16 +1004,17 @@ public class PipelineResourceTest extends EntityResourceTest<Pipeline, CreatePip
     }
 
     // Test pagination with fields=tasks,tags (should fetch both pipeline and task tags)
-    target = getResource("pipelines").queryParam("fields", "tasks,tags").queryParam("limit", "10");
+    target = getResource("pipelines").queryParam("fields", "tasks,tags");
 
-    pipelineList = TestUtils.get(target, PipelineList.class, ADMIN_AUTH_HEADERS);
-    assertNotNull(pipelineList.getData());
+    pipelineList =
+        TestUtils.getAllPages(target, PipelineList.class, "after", "limit", 50, ADMIN_AUTH_HEADERS);
+    assertListNotEmpty(pipelineList);
 
     // Verify at least one of our created pipelines is in the response
     ourPipelines =
-        pipelineList.getData().stream()
+        pipelineList.stream()
             .filter(p -> createdPipelines.stream().anyMatch(cp -> cp.getId().equals(p.getId())))
-            .collect(Collectors.toList());
+            .toList();
 
     assertFalse(
         ourPipelines.isEmpty(), "Should find at least one of our created pipelines in pagination");
